--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
   </style>
 </head>
 <body>
-  <h1>The Ring</h1>
+  <h1>The Ring - Top Rated Photo Gallery</h1>
   
   <div class="featured-post">
-    <h2>Post of the Week</h2>
+    <h2>Coloring</h2>
     <img src="D:\MyData\1learning\001software_engineer\portofolio_project_final\pictures\feature.PNG" alt="Feature">
   </div>
   
@@ -151,9 +151,6 @@
     
     <div class="gallery">
       <div class="gallery-item">
-        <img srcI apologize, it seems that my response got cut off. Here's the continuation of the code:
-
-```html
         <img src="D:\MyData\1learning\001software_engineer\portofolio_project_final\pictures\sports1.PNG" alt="Sports Image 1">
         <h3>Horses </h3>
         <p>Rating: 4.7/5</p>
