add about us and contact us function

--- a/index.html
+++ b/index.html
@@ -210,6 +210,16 @@
         element.msRequestFullscreen();
       }
     }
+
+    // JavaScript function to show "About Website" information
+    function showAbout() {
+      alert("Welcome to The Ring - Top Rated Photo Gallery! This website showcases a collection of stunning photographs. Enjoy your visual journey!");
+    }
+
+    // JavaScript function to show "Contact Us" information
+    function showContact() {
+      alert("For any inquiries or feedback, please email us at thering@theringgallery.com or call us at +1-123-456-7890.");
+    }
   </script>
 </body>
 </html>
